--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -186,3 +186,30 @@ footer nav ul {
 	margin: 2em
 }
 
+/* BOUTON FILTRE */
+.filtres-galery{
+	display: flex;
+	justify-content: center ;
+	margin-bottom: 30px;
+}
+
+.filtre-btn {
+  background-color: transparent;
+  color: #1D6154;
+  border: 1px solid #444;
+  padding: 10px 20px;
+  margin: 5px;
+  border-radius: 25px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  font-weight: bold;
+  font-size: 16px;
+  font-family: "Syne", sans-serif;
+
+}
+
+.filtre-btn:hover {
+  background-color: #1D6154;
+  color: white;
+}
+
