--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -106,6 +106,11 @@ nav li {
 li:hover {
 	color: #B1663C;
 }
+
+.login-link:hover{
+	color: #B1663C;
+}
+
 #introduction {
 	display: flex;
 	align-items: center;
@@ -225,6 +230,14 @@ footer nav ul {
 .login-link{
 	text-decoration: none;
 	color: black;
+	position: relative;
+  	z-index: 1;
+  	margin-top: 100px;	
+}
+
+nav li{
+	position: relative;
+  	z-index: 1;
 }
 
 /*PAGE LOGIN*/
@@ -233,6 +246,7 @@ footer nav ul {
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
+	margin-top: -100px;
 }
 
 .login-container h2{
@@ -281,5 +295,26 @@ footer{
 	height: 50px;
 	padding-bottom: 15px;
 	padding-top: 2px;
+}
+
+
+#admin-banner {
+  background-color: black;
+  color: white;
+  text-align: center;
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  align-items: center;
+}
+
+#admin-banner a {
+	text-decoration: none;
+	color: white;
+}
+
+.hidden {
+  display: none;
 }
 
