--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -3,6 +3,7 @@
    License: none (public domain)
 */
 
+/*GENERAL*/
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -28,6 +29,7 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
+
 body {
 	line-height: 1;
 	background-color: #FFFEF8;
@@ -39,34 +41,40 @@ body {
 ol, ul {
 	list-style: none;
 }
+
 blockquote, q {
 	quotes: none;
 }
+
 blockquote:before, blockquote:after,
 q:before, q:after {
 	content: '';
 	content: none;
 }
+
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
 /** end reset css**/
-body {
+.container {
 	max-width: 1140px;
 	margin:auto;
 	font-family: 'Work Sans' ;
 	font-size: 14px;
 }
+
 header {
 	display: flex;
 	justify-content: space-between;
-	margin: 50px 0
+	margin: 50px 0; 
 }
 
 main{
 	flex: 1;
 }
+
 section {
 	margin: 50px 0
 }
@@ -92,12 +100,14 @@ h2{
 	font-size: 30px;
 	color: #1D6154
 }
+
 nav ul {
 	display: flex;
 	align-items: center;
 	list-style-type: none;
 
 }
+
 nav li {
 	padding: 0 10px;
 	font-size: 1.2em;
@@ -115,9 +125,11 @@ li:hover {
 	display: flex;
 	align-items: center;
 }
+
 #introduction figure {
 	flex: 1
 }
+
 #introduction img {
 	display: block;
 	margin: auto;
@@ -127,6 +139,7 @@ li:hover {
 #introduction article {
 	flex: 1
 }
+
 #introduction h2 {
 	margin-bottom: 1em;
 }
@@ -134,10 +147,12 @@ li:hover {
 #introduction p {
 	margin-bottom: 0.5em;
 }
+
 #portfolio h2 {
 	text-align: center;
 	margin-bottom: 1em;
 }
+
 .gallery {
 	width: 100%;
 	display: grid;
@@ -148,19 +163,21 @@ li:hover {
 
 .gallery img {
 	width: 100%;
-
 }
+
 #contact {
 	width: 50%;
-margin: auto;
+    margin: auto;
 }
+
 #contact > * {
 	text-align: center;
-
 }
+
 #contact h2{
 	margin-bottom: 20px;
 }
+
 #contact form {
 	text-align: left;
 	margin-top:30px;
@@ -174,9 +191,11 @@ margin: auto;
 	border: none;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
+
 #contact label {
 	margin: 2em 0 1em 0;
 }
+
 #contact textarea {
 	border: none;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
@@ -199,7 +218,88 @@ footer nav ul {
 	margin: 2em
 }
 
-/* BOUTON FILTRE */
+/*MODIFICATION APPORTEES*/
+/*BANNIERE DU HAUT*/
+body.with-banner {
+  	padding-top: 50px;
+}
+
+#admin-banner {
+  	background-color: black;
+  	color: white;
+  	text-align: center;
+  	padding: 10px;
+  	display: flex;
+  	justify-content: center;
+  	gap: 10px;
+  	align-items: center;
+  	width: 100%;
+  	font-size: 16px;
+  	font-family: 'Work Sans';
+  	position: fixed;
+  	top: 0;
+  	left: 0;
+  	z-index: 9999;
+	height: 31px;
+    padding-top: 24px;
+}
+
+#admin-banner a {
+  	text-decoration: none;
+  	color: white;
+  	margin: 50px;
+}
+
+.hidden {
+  	display: none !important;
+}
+
+/*LOGIN - LOGOUT*/
+.login-link{
+	text-decoration: none;
+	color: black;
+}
+
+.logout-style {
+  	text-decoration: none;
+  	color: black;
+}
+
+.logout-style:hover{
+	color: #B1663C;
+}
+
+/*SECTION PORTFOLIO*/
+#portfolio{
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+}
+
+/*PORTFOLIO HEADER*/
+.portfolio-header {
+  	display: flex;
+  	align-items: center;
+  	justify-content: center;
+  	margin-bottom: 50px;
+  	gap: 20px;
+  	margin-top: 50px;
+}
+
+/*BOUTON MODIFIER*/
+.btn-modifier {
+  	background: transparent;
+  	border: none;
+  	font-size: 1rem;
+  	color: #000; 
+  	cursor: pointer;
+  	display: flex;
+  	align-items: center;
+  	padding-bottom: 30px;
+  	font-family: 'Work Sans' ;
+}
+
+/* SECTION FILTRE */
 .filtres-galery{
 	display: flex;
 	justify-content: center ;
@@ -207,52 +307,217 @@ footer nav ul {
 }
 
 .filtre-btn {
-  background-color: transparent;
-  color: #1D6154;
-  border: 1px solid #444;
-  padding: 10px 20px;
-  margin: 5px;
-  border-radius: 25px;
-  cursor: pointer;
-  transition: background-color 0.3s;
-  font-weight: bold;
-  font-size: 16px;
-  font-family: "Syne", sans-serif;
-
+  	background-color: transparent;
+  	color: #1D6154;
+  	border: 1px solid #444;
+  	padding: 10px 20px;
+  	margin: 5px;
+  	border-radius: 25px;
+  	cursor: pointer;
+  	transition: background-color 0.3s;
+  	font-weight: bold;
+  	font-size: 16px;
+  	font-family: "Syne", sans-serif;
 }
 
 .filtre-btn:hover {
-  background-color: #1D6154;
-  color: white;
+  	background-color: #1D6154;
+  	color: white;
 }
 
-/* LOGIN */
-.login-link{
-	text-decoration: none;
-	color: black;
-	position: relative;
-  	z-index: 1;
-  	margin-top: 100px;	
+/*MODALE*/
+.modal {
+  	position: fixed;
+  	top: 0; left: 0; right: 0; bottom: 0;
+  	background: rgba(0,0,0,0.6);
+  	display: flex;
+  	justify-content: center;
+  	align-items: center;
+  	z-index: 1000;
 }
 
-nav li{
-	position: relative;
-  	z-index: 1;
+.modal-content {
+  	background: white;
+  	padding: 20px;
+  	width: 100%;
+  	border-radius: 10px;
+  	position: relative;
+	max-width: 600px;
+	height: 700px;
+}
+
+.modal-close {
+  	position: absolute;
+  	top: 10px; 
+	right: 10px;
+  	background: transparent;
+  	border: none;
+  	font-size: 2rem;
+  	cursor: pointer;
+}
+
+/*GALERIE PHOTO*/
+.modal-gallery {
+  	display: flex;
+  	flex-wrap: wrap;
+  	gap: 10px;
+  	justify-content: flex-start;
+	width: 100%;
+	max-width: 450px;
+}
+
+.modal-thumbnail {
+  	text-align: center;
+}
+
+.modal-thumbnail img {
+  	width: 80px;
+  	height: auto;
+  	object-fit: cover;
+}
+
+#modal-view-gallery{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	flex-wrap: wrap;
+}
+
+#modal-view-gallery h3{
+	font-family: "Work Sans", sans-serif;
+	text-align: center;
+	font-size: 26px;
+	margin-top: 50px;
+	margin-bottom: 60px;
+}
+
+.modal-separator {
+  	height: 2px;
+  	background-color: #B3B3B3;
+  	border: none;
+  	width: 100%;
+	max-width: 450px;
+	margin-top: 80px;
+	margin-bottom: 50px;
+}
+
+/*AJOUT PHOTO*/
+#to-add-photo-view{
+	font-family:"Syne", sans-serif;
+	font-size: 14px;
+	border: none;
+	border-radius: 60px;
+	color: white;
+    background-color: #1D6154;
+	padding: 15px;
+	width: 237px;
+	font-weight: bold;
+}
+
+#modal-view-add-photo{
+	font-family:"Work Sans", sans-serif;
+}
+
+#modal-view-add-photo button{
+	background-color: transparent;
+	border: none;
+}
+
+#modal-view-add-photo h3{
+	text-align: center;
+	font-size: 26px;
+	margin-bottom: 30px;
+}
+
+#file-photo{
+	display: none;
+}
+
+.photo-upload{
+	width: 70%;
+	margin: 0 auto;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 10px;
+	margin-bottom: 20px;
+	padding: 20px;
+	background-color: #E8F1F6;
+}
+
+.upload-zone{
+	font-size: 76px;
+}
+
+#add-photo-form {
+	width: 80%;    
+	margin: 0 auto;    
+	display: flex;
+	flex-direction: column;
+	align-items: center; 
+	gap: 15px;
+}
+
+#photo-file {
+	display: flex;
+	text-align: start;
+	color: #306685;
+	background-color: #CBD6DC;
+	border-radius: 50px;
+	padding: 12px;
+	width: 50%;
+	padding-left: 40px;
+}
+
+.upload-info{
+	font-size: 10px;
+}
+
+.info-upload{
+	display: flex;
+	justify-content: flex-start;
+	flex-direction: column;
+	width: 77%;
+	margin: 0 auto;
+	gap: 15px;
+	margin-top: 30px;
+}
+
+#photo-title, #photo-category{
+	height: 50px;
+	border: none;
+	box-shadow: 0 0 14px rgba(0, 0, 0, 0.1);
+}
+
+
+
+/*FOOTER*/
+footer{
+	background-color: white;
+	height: 50px;
+	padding-bottom: 15px;
+	padding-top: 2px;
 }
 
 /*PAGE LOGIN*/
+/*MAIN - CONTENEUR SECONDAIRE*/
 .login-container{
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
-	margin-top: -100px;
+	width: 1140px;
+	margin-bottom: 265px;
+	margin-top: 150px;
+	height: 100%;
 }
 
 .login-container h2{
 	margin-bottom: 20px;
 }
 
+/*FORMULAIRE*/
 .login-form label {
 	margin-bottom: 5px;
 	margin-top: 20px;
@@ -288,33 +553,3 @@ nav li{
 	font-family: "Work Sans", sans-serif;
 	font-size: 14px;
 }
-
-/*FOOTER*/
-footer{
-	background-color: white;
-	height: 50px;
-	padding-bottom: 15px;
-	padding-top: 2px;
-}
-
-
-#admin-banner {
-  background-color: black;
-  color: white;
-  text-align: center;
-  padding: 10px;
-  display: flex;
-  justify-content: center;
-  gap: 10px;
-  align-items: center;
-}
-
-#admin-banner a {
-	text-decoration: none;
-	color: white;
-}
-
-.hidden {
-  display: none;
-}
-
