--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -343,7 +343,7 @@ body.with-banner {
   	border-radius: 10px;
   	position: relative;
 	max-width: 600px;
-	height: 700px;
+	height: 630px;
 }
 
 .modal-close {
@@ -398,11 +398,14 @@ body.with-banner {
   	border: none;
   	width: 100%;
 	max-width: 450px;
-	margin-top: 80px;
-	margin-bottom: 50px;
+	margin-top: 50px;
 }
 
 /*AJOUT PHOTO*/
+#back-to-gallery{
+	font-size: 18px;
+}
+
 #to-add-photo-view{
 	font-family:"Syne", sans-serif;
 	font-size: 14px;
@@ -413,6 +416,7 @@ body.with-banner {
 	padding: 15px;
 	width: 237px;
 	font-weight: bold;
+	margin-top: 25px;
 }
 
 #modal-view-add-photo{
@@ -435,13 +439,12 @@ body.with-banner {
 }
 
 .photo-upload{
-	width: 70%;
+	width: 80%;
 	margin: 0 auto;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	gap: 10px;
-	margin-bottom: 20px;
 	padding: 20px;
 	background-color: #E8F1F6;
 }
@@ -478,10 +481,10 @@ body.with-banner {
 	display: flex;
 	justify-content: flex-start;
 	flex-direction: column;
-	width: 77%;
+	width: 87%;
 	margin: 0 auto;
 	gap: 15px;
-	margin-top: 30px;
+	margin-top: 15px;
 }
 
 #photo-title, #photo-category{
@@ -490,7 +493,19 @@ body.with-banner {
 	box-shadow: 0 0 14px rgba(0, 0, 0, 0.1);
 }
 
-
+#validation-button{
+	font-family:"Syne", sans-serif;
+	font-size: 14px;
+	border: none;
+	border-radius: 60px;
+	color: white;
+    background-color: #A7A7A7 !important;
+	font-weight: bold;
+	height: 45px;
+	width: 237px;
+	margin-left: 90px;
+	margin-top: 10px;
+}
 
 /*FOOTER*/
 footer{
