--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -163,6 +163,8 @@ li:hover {
 
 .gallery img {
 	width: 100%;
+	height: 500px;
+    object-fit: cover;
 }
 
 #contact {
@@ -281,7 +283,7 @@ body.with-banner {
   	display: flex;
   	align-items: center;
   	justify-content: center;
-  	margin-bottom: 50px;
+  	margin-bottom: 20px;
   	gap: 20px;
   	margin-top: 50px;
 }
@@ -364,6 +366,7 @@ body.with-banner {
   	justify-content: flex-start;
 	width: 100%;
 	max-width: 450px;
+	margin-bottom: 50px;
 }
 
 .modal-thumbnail {
@@ -372,7 +375,7 @@ body.with-banner {
 
 .modal-thumbnail img {
   	width: 80px;
-  	height: auto;
+  	height: 104px;
   	object-fit: cover;
 }
 
@@ -388,7 +391,7 @@ body.with-banner {
 	font-family: "Work Sans", sans-serif;
 	text-align: center;
 	font-size: 26px;
-	margin-top: 50px;
+	margin-top: 30px;
 	margin-bottom: 60px;
 }
 
@@ -398,7 +401,6 @@ body.with-banner {
   	border: none;
   	width: 100%;
 	max-width: 450px;
-	margin-top: 50px;
 }
 
 /*BOUTON SUPPRESSION D'IMAGE*/
@@ -459,6 +461,7 @@ body.with-banner {
 	display: none;
 }
 
+
 .photo-upload{
 	width: 80%;
 	margin: 0 auto;
@@ -512,6 +515,10 @@ body.with-banner {
 	height: 50px;
 	border: none;
 	box-shadow: 0 0 14px rgba(0, 0, 0, 0.1);
+}
+
+#photo-category{
+	margin-bottom: 20px;
 }
 
 #validation-button{
