--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -4,19 +4,87 @@
 */
 
 /*GENERAL*/
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
 	margin: 0;
 	padding: 0;
 	border: 0;
@@ -24,9 +92,19 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 }
+
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
 	display: block;
 }
 
@@ -38,16 +116,20 @@ body {
 	min-height: 100vh;
 }
 
-ol, ul {
+ol,
+ul {
 	list-style: none;
 }
 
-blockquote, q {
+blockquote,
+q {
 	quotes: none;
 }
 
-blockquote:before, blockquote:after,
-q:before, q:after {
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
 	content: '';
 	content: none;
 }
@@ -60,18 +142,18 @@ table {
 /** end reset css**/
 .container {
 	max-width: 1140px;
-	margin:auto;
-	font-family: 'Work Sans' ;
+	margin: auto;
+	font-family: 'Work Sans';
 	font-size: 14px;
 }
 
 header {
 	display: flex;
 	justify-content: space-between;
-	margin: 50px 0; 
+	margin: 50px 0;
 }
 
-main{
+main {
 	flex: 1;
 }
 
@@ -79,7 +161,7 @@ section {
 	margin: 50px 0
 }
 
-h1{
+h1 {
 	display: flex;
 	flex-direction: column;
 	font-family: 'Syne';
@@ -88,13 +170,13 @@ h1{
 	color: #B1663C
 }
 
-h1 > span {
+h1>span {
 	font-family: 'Work Sans';
-	font-size:10px;
+	font-size: 10px;
 	letter-spacing: 0.1em;
 }
 
-h2{
+h2 {
 	font-family: 'Syne';
 	font-weight: 700;
 	font-size: 30px;
@@ -117,7 +199,7 @@ li:hover {
 	color: #B1663C;
 }
 
-.login-link:hover{
+.login-link:hover {
 	color: #B1663C;
 }
 
@@ -164,25 +246,25 @@ li:hover {
 .gallery img {
 	width: 100%;
 	height: 500px;
-    object-fit: cover;
+	object-fit: cover;
 }
 
 #contact {
 	width: 50%;
-    margin: auto;
+	margin: auto;
 }
 
-#contact > * {
+#contact>* {
 	text-align: center;
 }
 
-#contact h2{
+#contact h2 {
 	margin-bottom: 20px;
 }
 
 #contact form {
 	text-align: left;
-	margin-top:30px;
+	margin-top: 30px;
 	display: flex;
 	flex-direction: column;
 }
@@ -203,15 +285,15 @@ li:hover {
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
 
-input[type="submit"]{
+input[type="submit"] {
 	font-family: 'Syne';
 	font-weight: 700;
 	color: white;
 	background-color: #1D6154;
-	margin : 2em auto ;
+	margin: 2em auto;
 	width: 180px;
 	text-align: center;
-	border-radius: 60px ;
+	border-radius: 60px;
 }
 
 footer nav ul {
@@ -223,56 +305,56 @@ footer nav ul {
 /*MODIFICATION APPORTEES*/
 /*BANNIERE DU HAUT*/
 body.with-banner {
-  	padding-top: 50px;
+	padding-top: 50px;
 }
 
 #admin-banner {
-  	background-color: black;
-  	color: white;
-  	text-align: center;
-  	padding: 10px;
-  	display: flex;
-  	justify-content: center;
-  	gap: 10px;
-  	align-items: center;
-  	width: 100%;
-  	font-size: 16px;
-  	font-family: 'Work Sans';
-  	position: fixed;
-  	top: 0;
-  	left: 0;
-  	z-index: 9999;
+	background-color: black;
+	color: white;
+	text-align: center;
+	padding: 10px;
+	display: flex;
+	justify-content: center;
+	gap: 10px;
+	align-items: center;
+	width: 100%;
+	font-size: 16px;
+	font-family: 'Work Sans';
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 9999;
 	height: 31px;
-    padding-top: 24px;
+	padding-top: 24px;
 }
 
 #admin-banner a {
-  	text-decoration: none;
-  	color: white;
-  	margin: 50px;
+	text-decoration: none;
+	color: white;
+	margin: 50px;
 }
 
 .hidden {
-  	display: none !important;
+	display: none !important;
 }
 
 /*LOGIN - LOGOUT*/
-.login-link{
+.login-link {
 	text-decoration: none;
 	color: black;
 }
 
 .logout-style {
-  	text-decoration: none;
-  	color: black;
+	text-decoration: none;
+	color: black;
 }
 
-.logout-style:hover{
+.logout-style:hover {
 	color: #B1663C;
 }
 
 /*SECTION PORTFOLIO*/
-#portfolio{
+#portfolio {
 	display: flex;
 	align-items: center;
 	flex-direction: column;
@@ -280,106 +362,109 @@ body.with-banner {
 
 /*PORTFOLIO HEADER*/
 .portfolio-header {
-  	display: flex;
-  	align-items: center;
-  	justify-content: center;
-  	margin-bottom: 20px;
-  	gap: 20px;
-  	margin-top: 50px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin-bottom: 20px;
+	gap: 20px;
+	margin-top: 50px;
 }
 
 /*BOUTON MODIFIER*/
 .btn-modifier {
-  	background: transparent;
-  	border: none;
-  	font-size: 1rem;
-  	color: #000; 
-  	cursor: pointer;
-  	display: flex;
-  	align-items: center;
-  	padding-bottom: 30px;
-  	font-family: 'Work Sans' ;
+	background: transparent;
+	border: none;
+	font-size: 1rem;
+	color: #000;
+	cursor: pointer;
+	display: flex;
+	align-items: center;
+	padding-bottom: 30px;
+	font-family: 'Work Sans';
 }
 
 /* SECTION FILTRE */
-.filtres-galery{
+.filtres-galery {
 	display: flex;
-	justify-content: center ;
+	justify-content: center;
 	margin-bottom: 30px;
 }
 
 .filtre-btn {
-  	background-color: transparent;
-  	color: #1D6154;
-  	border: 1px solid #444;
-  	padding: 10px 20px;
-  	margin: 5px;
-  	border-radius: 25px;
-  	cursor: pointer;
-  	transition: background-color 0.3s;
-  	font-weight: bold;
-  	font-size: 16px;
-  	font-family: "Syne", sans-serif;
+	background-color: transparent;
+	color: #1D6154;
+	border: 1px solid #444;
+	padding: 10px 20px;
+	margin: 5px;
+	border-radius: 25px;
+	cursor: pointer;
+	transition: background-color 0.3s;
+	font-weight: bold;
+	font-size: 16px;
+	font-family: "Syne", sans-serif;
 }
 
 .filtre-btn:hover {
-  	background-color: #1D6154;
-  	color: white;
+	background-color: #1D6154;
+	color: white;
 }
 
 /*MODALE*/
 .modal {
-  	position: fixed;
-  	top: 0; left: 0; right: 0; bottom: 0;
-  	background: rgba(0,0,0,0.6);
-  	display: flex;
-  	justify-content: center;
-  	align-items: center;
-  	z-index: 1000;
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background: rgba(0, 0, 0, 0.6);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	z-index: 1000;
 }
 
 .modal-content {
-  	background: white;
-  	padding: 20px;
-  	width: 100%;
-  	border-radius: 10px;
-  	position: relative;
+	background: white;
+	padding: 20px;
+	width: 100%;
+	border-radius: 10px;
+	position: relative;
 	max-width: 600px;
 	height: 630px;
 }
 
 .modal-close {
-  	position: absolute;
-  	top: 10px; 
+	position: absolute;
+	top: 10px;
 	right: 10px;
-  	background: transparent;
-  	border: none;
-  	font-size: 2rem;
-  	cursor: pointer;
+	background: transparent;
+	border: none;
+	font-size: 2rem;
+	cursor: pointer;
 }
 
 /*GALERIE PHOTO*/
 .modal-gallery {
-  	display: flex;
-  	flex-wrap: wrap;
-  	gap: 10px;
-  	justify-content: flex-start;
+	display: flex;
+	flex-wrap: wrap;
+	gap: 10px;
+	justify-content: flex-start;
 	width: 100%;
 	max-width: 450px;
 	margin-bottom: 50px;
 }
 
 .modal-thumbnail {
-  	text-align: center;
+	text-align: center;
 }
 
 .modal-thumbnail img {
-  	width: 80px;
-  	height: 104px;
-  	object-fit: cover;
+	width: 80px;
+	height: 104px;
+	object-fit: cover;
 }
 
-#modal-view-gallery{
+#modal-view-gallery {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -387,7 +472,7 @@ body.with-banner {
 	flex-wrap: wrap;
 }
 
-#modal-view-gallery h3{
+#modal-view-gallery h3 {
 	font-family: "Work Sans", sans-serif;
 	text-align: center;
 	font-size: 26px;
@@ -396,73 +481,73 @@ body.with-banner {
 }
 
 .modal-separator {
-  	height: 2px;
-  	background-color: #B3B3B3;
-  	border: none;
-  	width: 100%;
+	height: 2px;
+	background-color: #B3B3B3;
+	border: none;
+	width: 100%;
 	max-width: 450px;
 }
 
 /*BOUTON SUPPRESSION D'IMAGE*/
 .modal-thumbnail {
-  position: relative;
+	position: relative;
 }
 
 .delete-btn {
-  position: absolute;
-  top: 5px;
-  right: 5px;
-  background: #000;
-  color: #fff;
-  border: none;
-  cursor: pointer;
-  padding: 4px;
-  font-size: 0.9rem;
+	position: absolute;
+	top: 5px;
+	right: 5px;
+	background: #000;
+	color: #fff;
+	border: none;
+	cursor: pointer;
+	padding: 4px;
+	font-size: 0.9rem;
 }
 
 .delete-btn i {
-  pointer-events: none;
+	pointer-events: none;
 }
 
 /*AJOUT PHOTO*/
-#back-to-gallery{
+#back-to-gallery {
 	font-size: 18px;
 }
 
-#to-add-photo-view{
-	font-family:"Syne", sans-serif;
+#to-add-photo-view {
+	font-family: "Syne", sans-serif;
 	font-size: 14px;
 	border: none;
 	border-radius: 60px;
 	color: white;
-    background-color: #1D6154;
+	background-color: #1D6154;
 	padding: 15px;
 	width: 237px;
 	font-weight: bold;
 	margin-top: 25px;
 }
 
-#modal-view-add-photo{
-	font-family:"Work Sans", sans-serif;
+#modal-view-add-photo {
+	font-family: "Work Sans", sans-serif;
 }
 
-#modal-view-add-photo button{
+#modal-view-add-photo button {
 	background-color: transparent;
 	border: none;
 }
 
-#modal-view-add-photo h3{
+#modal-view-add-photo h3 {
 	text-align: center;
 	font-size: 26px;
 	margin-bottom: 30px;
 }
 
-#file-photo{
+#file-photo {
 	display: none;
 }
 
 
-.photo-upload{
+.photo-upload {
 	width: 80%;
 	margin: 0 auto;
 	display: flex;
@@ -473,16 +558,16 @@ body.with-banner {
 	background-color: #E8F1F6;
 }
 
-.upload-zone{
+.upload-zone {
 	font-size: 76px;
 }
 
 #add-photo-form {
-	width: 80%;    
-	margin: 0 auto;    
+	width: 80%;
+	margin: 0 auto;
 	display: flex;
 	flex-direction: column;
-	align-items: center; 
+	align-items: center;
 	gap: 15px;
 }
 
@@ -497,11 +582,11 @@ body.with-banner {
 	padding-left: 40px;
 }
 
-.upload-info{
+.upload-info {
 	font-size: 10px;
 }
 
-.info-upload{
+.info-upload {
 	display: flex;
 	justify-content: flex-start;
 	flex-direction: column;
@@ -511,23 +596,24 @@ body.with-banner {
 	margin-top: 15px;
 }
 
-#photo-title, #photo-category{
+#photo-title,
+#photo-category {
 	height: 50px;
 	border: none;
 	box-shadow: 0 0 14px rgba(0, 0, 0, 0.1);
 }
 
-#photo-category{
+#photo-category {
 	margin-bottom: 20px;
 }
 
-#validation-button{
-	font-family:"Syne", sans-serif;
+#validation-button {
+	font-family: "Syne", sans-serif;
 	font-size: 14px;
 	border: none;
 	border-radius: 60px;
 	color: white;
-    background-color: #A7A7A7 !important;
+	background-color: #A7A7A7 !important;
 	font-weight: bold;
 	height: 45px;
 	width: 237px;
@@ -535,7 +621,7 @@ body.with-banner {
 }
 
 /*FOOTER*/
-footer{
+footer {
 	background-color: white;
 	height: 50px;
 	padding-bottom: 15px;
@@ -544,7 +630,7 @@ footer{
 
 /*PAGE LOGIN*/
 /*MAIN - CONTENEUR SECONDAIRE*/
-.login-container{
+.login-container {
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -555,7 +641,7 @@ footer{
 	height: 100%;
 }
 
-.login-container h2{
+.login-container h2 {
 	margin-bottom: 20px;
 }
 
@@ -567,7 +653,7 @@ footer{
 
 .login-form input {
 	height: 50px;
-    box-shadow: 0 0 14px rgba(0, 0, 0, 0.1);
+	box-shadow: 0 0 14px rgba(0, 0, 0, 0.1);
 	border: none;
 }
 
@@ -578,8 +664,8 @@ footer{
 	border-radius: 60px;
 	border: none;
 	color: white;
-    background-color: #1D6154;
-	font-family:"Syne", sans-serif;
+	background-color: #1D6154;
+	font-family: "Syne", sans-serif;
 }
 
 .login-form a {
@@ -588,7 +674,7 @@ footer{
 	color: black;
 }
 
-.login-form{
+.login-form {
 	display: flex;
 	flex-direction: column;
 	width: 30%;
